--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+cat >.circleci/config.yml<<EOF
 jobs:
   build:
     docker:
@@ -25,8 +26,7 @@ jobs:
       - run:
           command: |
             echo "This is an integration step"
-            exit 0
-                # Even if the job fails, continue to the next jobs
+            exit 1
 
   prod:
     docker:
@@ -35,50 +35,12 @@ jobs:
       - checkout
       - run: echo "This is a deploy step"
 
-  artifact:
-    docker:
-      - image: python:3.6
-    steps:
-      - checkout
-      - run: echo "hello" > hello.txt
-      - store_artifacts:
-          path: hello.txt
-          destination: artifact-file
-
 workflows:
   version: 2
   django:
     jobs:
-      - build:
-          filters:          # Run the job with a specific branch
-            branches:
-              only:
-                - main
+      - build
       - test
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - main
       - integration
-          requires:
-            - test
-          filters:
-            branches:
-              only:
-                - main
       - prod
-          requires:
-            - integration
-          filters:
-            branches:
-              only:
-                - main
-      - artifact
-          requires:
-            - prod
-          filters:
-            branches:
-              only:
-                - main
+EOF
