--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-cat >.circleci/config.yml<<EOF
 jobs:
   build:
     docker:
@@ -27,20 +26,27 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: always                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
       - image: python:3.6
     steps:
       - checkout
-      - run: echo "This is a deploy step"
+      - run: echo "This is a deploy step."
 
 workflows:
   version: 2
   django:
     jobs:
       - build
-      - test
-      - integration
-      - prod
-EOF
+      - test:
+          requires:
+            - build 
+      - integration:
+          requires:
+            - test
+      - prod:
+          type: approval
+          requires:
+            - integration
