--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 0
-          when: always                    # Even if the job fails, continue to the next stages
+                             # Even if the job fails, continue to the next stages
 
   prod:
     docker:
