--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 0
-          allow_failure: True  
+          when: on_fail  
   prod:
     docker:
       - image: python:3.6
